k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
